# prescrypt

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  Makefile  README.md  TODO.md  git-town.toml  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml  setup.cfg  test-config.toml
.builds/: alpine.yml  ubuntu-2404.yml
.github/workflows/: ci.yml
demos/: Makefile  README.md
demos/browser/: Makefile  README.md  index.html
demos/browser-extension/: Makefile  README.md  manifest.json  popup.html  test-page.html
demos/data-dashboard/: Makefile  README.md  index.html
demos/edge-worker/: Makefile  README.md  wrangler.toml
demos/python-playground/: Makefile  README.md  index.html  server.py
demos/simulation/: Makefile  README.md  index.html
demos/validation-library/: Makefile  README.md  index.html
docs/: contributing.md  index.md  mkdocs.yml
docs/api/: index.md
docs/blog/: .authors.yml
docs/docs/: credits.md  index.md
docs/examples/: browser-app.md  index.md  multi-file.md  nodejs-cli.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cheat-sheet.md  cli.md  developers.md  js-interop.md  language-support.md  modules.md  optimization.md  overview.md  source-maps.md  troubleshooting.md
docs/reference/: differences.md  features.md  limitations.md
notes/: TODO.md  history.md
programs/internal/: _match_statements.py  assert_statements.js  assert_statements.py  builtin_functions.py  bytes_encoding.py  bytes_methods.py  chained_assignment.py  class_advanced.py  class_property.py  class_special_methods.py  class_staticclassmethod.py  class_super.py  comparison_types.py  comprehensions.py  constant_folding.py  constructors_advanced.py  context_manager.py  dc_test.py  del_statements.js  del_statements.py  dict_methods.py  dict_unpacking.py  ellipsis.py  exception_chaining.py  exceptions.py  fstring_formatting.py  fstrings.py  functions.py  generator_protocol.py  global_nonlocal.js  global_nonlocal.py  isinstance_classes.py  js_object_methods.py  kwargs_call.py  lambda.py  list_methods.py  lists.py  match_statements.py  matmult.py  negative_indexing.py  (+16 more)
programs/micropython/: class_super.js  generator_send.js  generator_throw.js
programs/tryalgo/: arithm_expr_eval.py  arithm_expr_target.py  biconnected_components.py  binary_search.py  closest_points.py  closest_values.py  dfs.py  dinic.py  fast_exponentiation.py  floyd_warshall.py  freivalds.py  graph.py  graph01.py  huffman.py  interval_cover.py  interval_tree.py  karatsuba.py  knapsack.py  knuth_morris_pratt.py  left_right_inversions.py  levenshtein.py  longest_increasing_subsequence.py  manacher.py  matrix_chain_mult.py  min_mean_cycle.py  next_permutation.py  our_heap.py  our_queue.py  pareto.py  permutation_rank.py  predictive_text.py  primes.py  rabin_karp.py  rectangles_from_points.py  skip_list.py  subsetsum_divide.py  sudoku.py  test_anagrams.py  test_arithm.py  test_bellman_ford.py  (+16 more)
scripts/: _compile_helper.py  check-compile.py  coverage_report.py  test_manager.py
src/prescrypt/: __init__.py  base_compiler.py  bundler.py  compiler.py  constants.py  exceptions.py  expr_compiler.py  main.py  namespace.py  sourcemap.py  stdlib.py  (+4 more)
tests/: conftest.py
(+850 files in other folders)
