[tool.poetry]
name = "prescrypt-ng"
version = "0.8.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]
readme = "README.md"
packages = [{include = "prescrypt", from = "src" }]

[tool.poetry.scripts]
# How do we call it ?
prescrypt = "prescrypt.main:main"
py2js = "prescrypt.main:main"

[tool.poetry.dependencies]
python = "^3.10"
buildstr = "^0.1.0"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "^0.5.2"
dukpy = "^0.3.0"
devtools = "^0.11.0"
attrs = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
