[project]
authors = [
    {name = "Stefane Fermigier", email = "sf@abilian.com"},
]
requires-python = ">=3.10"
dependencies = [
    "buildstr<1.0.0,>=0.1.0",
    "plum-dispatch<3.0.0,>=2.1.1",
]
name = "prescrypt"
version = "0.9.1"
description = ""
readme = "README.md"

[project.scripts]
prescrypt = "prescrypt.main:main"
py2js = "prescrypt.main:main"

[dependency-groups]
dev = [
    # Generic
    "abilian-devtools<1.0.0,>=0.5.2",
    "devtools<1.0.0,>=0.11.0",
    # Test
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "nox>=2025.5.1",
    # Types & Lint
    "ruff>=0.14.11",
    "mypy>=1.19.1",
    "ty>=0.0.11",
    "pyrefly>=0.47.0",
    "pre-commit>=4.5.1",
    # JS infra for tests
    "dukpy<1.0.0,>=0.3.0",
    "quickjs<2.0.0,>=1.19.2",
    # Doc
    "mkdocs-material",
    # Misc
    "attrs<27.0.0,>=23.1.0",
    "snoop<1.0.0,>=0.4.3",
    "pyupgrade>=3.21.2",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.2.0b2",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.20",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.report]
exclude = []
omit = [
    "src/prescrypt/testing/**/*.py",
    "src/prescrypt/tools/**/*.py",
]
precision = 2
# ignore_errors = true
# skip_covered = true
# skip_empty = true
# fail_under = 90
# show_missing = true
